# Intelligent-RecoveryControl-Openenv-Environment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
server/: app.py
src/ai_pipeline_recovery/: __init__.py  client.py  environment.py  rewards.py  tasks.py
src/ai_pipeline_recovery/server/: __init__.py  app.py  main.py
src/irce/: client.py  dynamics.py  environment.py  grading.py  models.py  rewards.py  tasks.py
src/irce/server/: app.py  main.py
static/: app.js  index.html  styles.css
